0.0.2
-----
1. Ensure all prefs are prefixed pref_ in settings HTML file.
2. Add 'Bin/windows' to LMS's bin search paths if running under windows.
   Likewise add 'Bin/mac' for mac.
3. Rename 'Bin/darwin' to 'Bin/mac' as this is now added to the search path.
4. Add vcruntime140.dll to 'Bin/windows'
5. Don't repeatedly start mixer when API/DSTM invoked.

0.0.1
-----
1. Initial release.